-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0 Beta 3
-
None
-
33c59be551014c656370e0459c6cb5094ae68f3f
I've got the following code (m_layout is a member QTextLayout):
m_layout.setText(my_string); m_layout.beginLayout(); auto line = m_layout.createLine(); m_layout.endLayout(); m_layout.clearLayout(); QGlyphRun gr; auto glr = line.glyphRuns();
The call to glyphRuns crashes with a stack trace that goes into qwindows.dll:
qwindowsd.dll!QWindowsFontEngine::getGlyphBearings(unsigned int glyph, double * leftBearing, double * rightBearing) @ line 632
The same code works on macOS and Linux with both Qt 5.8 and 5.9